fix scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -16,4 +16,27 @@ body,
     overflow-y: auto;
     top: 0;
     left: 0;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+
+.container {
+    height: 200px;
+    width: 350px;
+    background-color: #3c3c3c;
+    overflow-y: auto;
+
+    /* hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.scroll::-webkit-scrollbar {
+    display: none;
+}
+
+/* hide scrollbar for chrome, safari and opera */
+.container::-webkit-scrollbar {
+    display: none;
 }
